--- a/SfListViewTest/SfListViewTest/MainPage.xaml
+++ b/SfListViewTest/SfListViewTest/MainPage.xaml
@@ -1,86 +1,213 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+xmlns:chip="clr-namespace:Syncfusion.XForms.Buttons;assembly=Syncfusion.Buttons.XForms"
+xmlns:inputLayout="clr-namespace:Syncfusion.XForms.TextInputLayout;assembly=Syncfusion.Core.XForms"
+xmlns:expander="clr-namespace:Syncfusion.XForms.Expander;assembly=Syncfusion.Expander.XForms"
 xmlns:listview="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:models="clr-namespace:SfListViewTest;assembly=SfListViewTest"
              xmlns:viewModels="clr-namespace:SfListViewTest;assembly=SfListViewTest"
+             xmlns:system="clr-namespace:System;assembly=netstandard"
              x:DataType="viewModels:MainPageViewModel"
              mc:Ignorable="d"
              x:Class="SfListViewTest.MainPage"
              x:Name="XamlPage">
-
-    <StackLayout Orientation="Horizontal"
-                 HorizontalOptions="FillAndExpand"
-                 VerticalOptions="Center"
-                 Margin="15,15,15,15">
-        <listview:SfListView x:Name="listView" ItemSize="50"
-                             ItemsSource="{Binding ColorsObservableCollection, Mode=Default}"
-                             ItemTapped="ListView_OnItemTapped"
-                             SelectionMode="SingleDeselect"
-                             SelectionGesture="Tap"
-                             HorizontalOptions="FillAndExpand"
-                             VerticalOptions="FillAndExpand">
-            <listview:SfListView.LayoutManager>
-                <listview:GridLayout x:Name="gridLayout">
-                    <listview:GridLayout.SpanCount>
-                        <OnPlatform x:TypeArguments="x:Int32">
-                            <On Platform="UWP">
-                                <OnIdiom x:TypeArguments="x:Int32"
-                                         Phone="1"
-                                         Tablet="2"
-                                         Desktop="4" />
-                            </On>
-
-                            <On Platform="Android">
-                                <OnIdiom x:TypeArguments="x:Int32"
-                                         Phone="2"
-                                         Tablet="2" />
-                            </On>
-
-                            <On Platform="iOS">
-                                <OnIdiom x:TypeArguments="x:Int32"
-                                         Phone="1"
-                                         Tablet="2" />
-                            </On>
-                        </OnPlatform>
-                    </listview:GridLayout.SpanCount>
-                </listview:GridLayout>
-            </listview:SfListView.LayoutManager>
-            <listview:SfListView.ItemTemplate>
-                <DataTemplate x:DataType="models:Colors">
-                    <ViewCell>
-                        <StackLayout>
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto" />
-                                    <RowDefinition Height="Auto" />
-                                </Grid.RowDefinitions>
-                                <Label Text="{Binding BackGroundColor}"
-                                       Grid.Column="0"
-                                       Grid.Row="0"
-                                       BackgroundColor="{Binding BgColor, Mode=Default}"
-                                       TextColor="{Binding FntColor, Mode=Default}"
-                                       HorizontalOptions="Center"
-                                       VerticalOptions="Center"/>
-                                <Label Text="{Binding ColorName}"
-                                       Grid.Column="0"
-                                       Grid.Row="1"
-                                       BackgroundColor="{Binding BgColor, Mode=Default}"
-                                       TextColor="{Binding FntColor, Mode=Default}"
-                                       HorizontalOptions="Center"
-                                       VerticalOptions="Center"/>
-
-                            </Grid>
+    <ContentPage.Content>
+        <StackLayout Orientation="Horizontal"
+                     HorizontalOptions="FillAndExpand"
+                     VerticalOptions="Center"
+                     Margin="15,15,15,15">
+            <!--<StackLayout>
+                <expander:SfExpander x:Name="Expander"
+                                             HeaderBackgroundColor="Transparent"
+                                             BackgroundColor="Transparent"
+                                             DynamicSizeMode="Content"
+                                             IsExpanded="{Binding IsExpanded, Mode=TwoWay}"
+                                             Margin="15,0,15,0">
+                    <expander:SfExpander.Header>
+                        <StackLayout Orientation="Horizontal"
+                                             HorizontalOptions="FillAndExpand"
+                                             VerticalOptions="Center"
+                                             BackgroundColor="Transparent">
+                            <StackLayout.HeightRequest>
+                                <x:OnPlatform Android="50" iOS="30" UWP="20" />
+                            </StackLayout.HeightRequest>
+                            <Label Text="Tap Here To Close The Editor"
+                                   FontSize="16"
+                                   TextColor="Black"
+                                   FontAttributes="Bold"
+                                   LineBreakMode="WordWrap"
+                                   HorizontalOptions="CenterAndExpand"
+                                   VerticalOptions="Center"
+                                   VerticalTextAlignment="Center"
+                                   HorizontalTextAlignment="Center"
+                                   IsVisible="{Binding IsExpanded, Mode=Default}" />
                         </StackLayout>
-                    </ViewCell>
-                </DataTemplate>
-            </listview:SfListView.ItemTemplate>
-        </listview:SfListView>
-    </StackLayout>
+                    </expander:SfExpander.Header>
+                    <expander:SfExpander.Content>
+                        <StackLayout x:Name="EditLayout"
+                                             Padding="0"
+                                             Spacing="20"
+                                             Margin="15,5,15,0">
+                            <StackLayout.Orientation>
+                                <x:OnIdiom Default="Horizontal" Tablet="Horizontal" Phone="Vertical" />
+                            </StackLayout.Orientation>
+                            <inputLayout:SfTextInputLayout Hint="Enter List Name"
+                                                                       InputViewPadding="5"
+                                                                       ContainerType="Outlined"
+                                                                       ReserveSpaceForAssistiveLabels="False"
+                                                                       UnfocusedColor="Black">
+                                <inputLayout:SfTextInputLayout.WidthRequest>
+                                    <OnPlatform x:TypeArguments="system:Double">
+                                        <On Platform="UWP" Value="700" />
+                                        <On Platform="Android" Value="300" />
+                                        <On Platform="iOS" Value="400" />
+                                    </OnPlatform>
+                                </inputLayout:SfTextInputLayout.WidthRequest>
+                                <Entry x:Name="ListNameEntry"
+                                       FontSize="16"
+                                               VerticalOptions="Start"
+                                               Margin="0,0,0,0">
+                                    <Entry.Triggers>
+                                        <Trigger TargetType="Entry"
+                                                         Property="IsFocused" Value="True">
+                                            <Setter Property="BackgroundColor" Value="Yellow" />
+                                        </Trigger>
+                                    </Entry.Triggers>
+                                </Entry>
+                            </inputLayout:SfTextInputLayout>
+                            <StackLayout x:Name="ListButtons"
+                                                 Spacing="10"
+                                                 Orientation="Horizontal"
+                                                 Margin="0,0,0,0">
+                                <chip:SfChip x:Name="DefaultChip"
+                                             Text="Default"
+                                             BackgroundColor="Green"
+                                             HasShadow="True"
+                                             ShadowColor="DarkSlateGray"
+                                             SelectionIndicatorColor="White" />
+                                <chip:SfChip x:Name="SharedChip"
+                                                       Text="Share"
+                                                       BackgroundColor="Green"
+                                                       HasShadow="True"
+                                                       ShadowColor="DarkSlateGray"
+                                                       SelectionIndicatorColor="White" />
+                                <chip:SfChip x:Name="EmailChip"
+                                                       Text="@"
+                                                       BackgroundColor="Green"
+                                                       HasShadow="True"
+                                                       ShadowColor="DarkSlateGray"
+                                                       ShowSelectionIndicator="False" />
+                                <chip:SfButton x:Name="SaveButton"
+                                                         VerticalOptions="Start"
+                                                         HorizontalOptions="Start"
+                                                         WidthRequest="150"
+                                                         IsTabStop="True"
+                                                         HeightRequest="40"
+                                                         BackgroundColor="Green">
+                                    <chip:SfButton.Content>
+                                        <Grid HorizontalOptions="Center" VerticalOptions="Center">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="45" />
+                                                <ColumnDefinition Width="*" />
+                                            </Grid.ColumnDefinitions>
+                                            <Grid Padding="15,0,5,0">
+                                                <Label Text="Button"
+                                                               HorizontalTextAlignment="Start"
+                                                               VerticalOptions="Center"
+                                                               VerticalTextAlignment="Center"
+                                                               HorizontalOptions="Start"
+                                                               FontSize="25">
+                                                </Label>
+                                            </Grid>
+                                            <Grid Grid.Column="1">
+                                                <Label HorizontalOptions="Center"
+                                                               HorizontalTextAlignment="Start"
+                                                               TextColor="White"
+                                                               VerticalTextAlignment="Center"
+                                                               VerticalOptions="Center"
+                                                               LineBreakMode="NoWrap"
+                                                               Text="Save">
+                                                </Label>
+                                            </Grid>
+                                        </Grid>
+                                    </chip:SfButton.Content>
+                                </chip:SfButton>
+                            </StackLayout>
+                        </StackLayout>
+                    </expander:SfExpander.Content>
+                </expander:SfExpander>
+            </StackLayout>-->
+            <StackLayout>
+                <listview:SfListView x:Name="listView" ItemSize="50"
+                                     ItemsSource="{Binding ColorsObservableCollection, Mode=Default}"
+                                     ItemTapped="ListView_OnItemTapped"
+                                     SelectionMode="SingleDeselect"
+                                     SelectionGesture="Tap"
+                                     HorizontalOptions="FillAndExpand"
+                                     VerticalOptions="FillAndExpand">
+                    <listview:SfListView.LayoutManager>
+                        <listview:GridLayout x:Name="gridLayout">
+                            <listview:GridLayout.SpanCount>
+                                <OnPlatform x:TypeArguments="x:Int32">
+                                    <On Platform="UWP">
+                                        <OnIdiom x:TypeArguments="x:Int32"
+                                                 Phone="1"
+                                                 Tablet="2"
+                                                 Desktop="4" />
+                                    </On>
 
+                                    <On Platform="Android">
+                                        <OnIdiom x:TypeArguments="x:Int32"
+                                                 Phone="2"
+                                                 Tablet="2" />
+                                    </On>
+
+                                    <On Platform="iOS">
+                                        <OnIdiom x:TypeArguments="x:Int32"
+                                                 Phone="1"
+                                                 Tablet="2" />
+                                    </On>
+                                </OnPlatform>
+                            </listview:GridLayout.SpanCount>
+                        </listview:GridLayout>
+                    </listview:SfListView.LayoutManager>
+                    <listview:SfListView.ItemTemplate>
+                        <DataTemplate x:DataType="models:Colors">
+                            <ViewCell>
+                                <StackLayout>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*" />
+                                        </Grid.ColumnDefinitions>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="Auto" />
+                                        </Grid.RowDefinitions>
+                                        <Label Text="{Binding BackGroundColor}"
+                                               Grid.Column="0"
+                                               Grid.Row="0"
+                                               BackgroundColor="{Binding BgColor, Mode=Default}"
+                                               TextColor="{Binding FntColor, Mode=Default}"
+                                               HorizontalOptions="Center"
+                                               VerticalOptions="Center" />
+                                        <Label Text="{Binding ColorName}"
+                                               Grid.Column="0"
+                                               Grid.Row="1"
+                                               BackgroundColor="{Binding BgColor, Mode=Default}"
+                                               TextColor="{Binding FntColor, Mode=Default}"
+                                               HorizontalOptions="Center"
+                                               VerticalOptions="Center" />
+
+                                    </Grid>
+                                </StackLayout>
+                            </ViewCell>
+                        </DataTemplate>
+                    </listview:SfListView.ItemTemplate>
+                </listview:SfListView>
+            </StackLayout>
+        </StackLayout>
+    </ContentPage.Content>
 </ContentPage>
