--- a/SfListViewTest/SfListViewTest/MainPage.xaml
+++ b/SfListViewTest/SfListViewTest/MainPage.xaml
@@ -23,9 +23,13 @@
         </ResourceDictionary>
     </ContentPage.Resources>
     <ContentPage.Content>
-        <StackLayout HorizontalOptions="FillAndExpand"
+        <Grid HorizontalOptions="FillAndExpand"
                      VerticalOptions="FillAndExpand"
                      Margin="15,15,15,15">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
             <StackLayout>
                 <expander:SfExpander x:Name="Expander"
                                              HeaderBackgroundColor="Transparent"
@@ -145,7 +149,7 @@
                     </expander:SfExpander.Content>
                 </expander:SfExpander>
             </StackLayout>
-            <StackLayout>
+            <StackLayout Grid.Row="1">
                 <listview:SfListView x:Name="listView" ItemSize="50"
                                      ItemsSource="{Binding ColorsObservableCollection, Mode=Default}"
                                      ItemTapped="ListView_OnItemTapped"
@@ -213,6 +217,6 @@
                     </listview:SfListView.ItemTemplate>
                 </listview:SfListView>
             </StackLayout>
-        </StackLayout>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
