Update expander code for UWP

--- a/SfListViewTest/SfListViewTest/MainPage.xaml
+++ b/SfListViewTest/SfListViewTest/MainPage.xaml
@@ -34,7 +34,7 @@
                 <expander:SfExpander x:Name="Expander"
                                              HeaderBackgroundColor="Transparent"
                                              BackgroundColor="Transparent"
-                                             DynamicSizeMode="Content"
+                                             DynamicSizeMode="{OnPlatform UWP=Content, Android=None, iOS=None}"
                                              IsExpanded="{Binding IsExpanded, Mode=TwoWay}"
                                              Margin="15,0,15,0">
                     <expander:SfExpander.Header>
