update and test null exception

--- a/SfListViewTest/SfListViewTest/MainPage.xaml
+++ b/SfListViewTest/SfListViewTest/MainPage.xaml
@@ -156,6 +156,7 @@
                                          ItemTapped="ListView_OnItemTapped"
                                          SelectionMode="SingleDeselect"
                                          SelectionGesture="Tap"
+                                         AllowGroupExpandCollapse="True"
                                          HorizontalOptions="FillAndExpand"
                                          VerticalOptions="FillAndExpand">
                         <listview:SfListView.LayoutManager>
